# AI-assistant_bot

./: .env.example  .gitignore  CLAUDE.md  INSTALL_CUDA.bat  README.md  pyproject.toml
.claude/: settings.local.json
.claude/taskmaster-data/: project.json  wbs-todos.json
.cuda_compat/: libcublas.so.11  libcublasLt.so.11  libcudart.so.11  libcufft.so.11  libcurand.so.11  libcusolver.so.11  libcusparse.so.11
audio/exports/: conversation_test-session-1762407116.json  conversation_test-session-1762407116.txt  conversation_test-session-1762407332.json  conversation_test-session-1762407332.txt
docs/: README.md
docs/dev/: api-provider-architecture.md  api-provider-implementation-summary.md  architecture_review_task13.md  development_progress_report.md  linus_test_cleanup_complete.md  progress_phase2_complete.md  task14_voice_api_complete.md  task15_cosyvoice_progress.md  test_coverage_report.md
docs/launch/: mvp_launch_checklist.md
docs/model_install_sop/: CosyVoice_Installation_Manual.md  F5-TTS_Setup_README.md
docs/planning/: mvp_tech_spec.md
frontend/: AVATAR_README.md  README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ConversationHistory.tsx  DemoPanel.tsx  Footer.tsx  Hero.tsx  VoiceProfileManager.tsx
frontend/src/hooks/: use-avatar-api.tsx  use-avatar-websocket.tsx
frontend/src/pages/: Index.tsx
performance_reports/: avatar_performance_report_20251106_164722.json  avatar_performance_summary_20251106_164722.txt
scripts/: README.md  avatar-scripts  create_simple_test_audio.py  download_models.py  generate_test_audio.py  init_database.py  run_tests.sh  setup_cuda_wsl2.ps1  test_frontend_integration.sh
scripts/maintenance/: cleanup_cache.sh  linux_resource_cleanup.sh  quick_cleanup.sh
scripts/setup/: WSL2_CUDA_SETUP.md  download_models.py  init_database.py  setup_cuda_wsl2.sh  validate_setup.py
scripts/testing/: create_stt_test_audio.py  run_tests.sh  test_model_loading.py
src/avatar/: __init__.py  main.py
src/avatar/api/: auth.py  conversations.py  monitoring.py  session_control.py  voice_profiles.py  websocket.py  websocket_enhanced.py  websocket_recovery.py
src/avatar/core/: config.py  error_handling.py  logging_config.py  model_preloader.py  monitoring.py  security.py  session_controller.py  session_manager.py  session_queue.py  vram_monitor.py  websocket_heartbeat.py  websocket_reconnect.py
src/avatar/services/: database.py  llm.py  llm_local.py  protocols.py  stt.py  stt_local.py  tts.py  tts_hq.py  tts_local.py
stability_reports/: avatar_stability_report_20251106_171026.json  stability_executive_summary_20251106_171026.txt
tests/: conftest.py  quick_service_test.py
tests/e2e/: e2e_hq_tts_test.py  e2e_pipeline_test.py  test_api_integration.py  test_error_handling_monitoring.py  test_full_pipeline.py  test_real_session_control.py  test_standalone_api.py  test_websocket_full.py  test_websocket_reconnection.py
tests/integration/: test_concurrent_session_control.py  test_conversation_api.py  test_cosyvoice_integration.py  test_task16_completion.py
tests/performance/: performance_report_generator.py  test_component_performance.py  test_e2e_latency_benchmark.py  test_e2e_synthetic_benchmark.py
tests/stability/: stability_report_generator.py  test_long_running_stability.py  test_memory_leak_detection.py  test_stability_validation.py
tests/unit/: __init__.py
tests/unit/api/: test_voice_profiles.py
tests/unit/core/: test_audio_utils.py  test_config.py  test_session_manager.py
tests/unit/services/: test_llm_service.py  test_stt_service.py  test_tts_hq_service.py  test_tts_service.py
tests/validation/: test_task13_validation.py
